--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,8 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Let's pretend this is a multi-selection option. Just select any of the checkbox preferences to see the behavior of the tri state checkbox below."
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+          />
 
     <it.sephiroth.android.library.checkbox3state.CheckBox3
         android:id="@+id/checkBox1"
@@ -27,10 +27,7 @@
         android:checked="false"
         android:enabled="true"
         android:text="Select All"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
-        app:sephiroth_checkbox3_checkableCycle="@array/sephiroth_checkbox3_cycleCheckedUncheckedOnly"
-        app:sephiroth_checkbox3_indeterminate="false" />
+         />
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -41,8 +38,7 @@
         android:checked="false"
         android:enabled="true"
         android:text="Single Option 1"
-        app:layout_constraintStart_toStartOf="@+id/checkBox1"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />
+        />
 
     <CheckBox
         android:id="@+id/checkBox3"
@@ -50,8 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Option 2"
-        app:layout_constraintStart_toStartOf="@+id/checkBox2"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+       />
 
     <CheckBox
         android:id="@+id/checkBox4"
@@ -59,7 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Another Option"
-        app:layout_constraintStart_toStartOf="@+id/checkBox3"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+       />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
